--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4200,5 +4200,13 @@
     "ambient_mode_msg": "يمتزج الوضع المحيط مع أجواء غرفة المعيشة. سيتم تنشيطه عند إغلاق الباب.",
     "three_standby": "بعد تحديد عدد الدقائق التي لا يتم فيها اتخاذ أي إجراء بعد \"شاشة الساعة\"، سيتم تحويل شاشة الخزانة إلى وضع الاستعداد.",
     "delete_account_tips": "سوف تتلقى رسالة بريد إلكتروني عند حذف جميع بياناتك من نظامنا.",
-    "CL_DV_RF_water_inlet_tube_sensor": "مستشعر أنبوب مدخل المياه"
+    "CL_DV_RF_water_inlet_tube_sensor": "مستشعر أنبوب مدخل المياه",
+    "CL_DV_OV_set_power_watts": "ضبط الطاقة (وات)",
+    "CL_DV_OV_power_90_desc": "إزالة الجليد عن المعجنات المحشوة بالكريمة.",
+    "CL_DV_OV_power_180_desc": "إزالة الجليد وتليين الزبدة أو الآيس كريم يدويًا.",
+    "CL_DV_OV_power_360_desc": "طهي منتجات الألبان أو المربيات على حرارة منخفضة.",
+    "CL_DV_OV_power_600_desc": "مناسب لتذويب الشوكولاتة، وطهي الأسماك والمأكولات البحرية، وطهي الفاصوليا المجففة على نار خفيفة، وإعادة تسخين وطهي الأطباق الحساسة التي تعتمد على البيض.",
+    "CL_DV_OV_power_750_desc": "استخدمها لطهي الخضروات الطازجة أو المجمدة.",
+    "CL_DV_OV_power_1000_desc": "الأفضل لإعادة تسخين المشروبات والماء والأطباق التي تحتوي على كمية كبيرة من السوائل بسرعة أو طهي الأطباق ذات المحتوى العالي من الماء (الحساء والصلصات وما إلى ذلك).",
+    "CL_DV_OV_microwave_power_levels": "مستويات طاقة الميكروويف"
 }
