--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4200,5 +4200,13 @@
     "ambient_mode_msg": "Η λειτουργία περιβάλλοντος συνδυάζεται με την ατμόσφαιρα του χώρου διαβίωσης. Θα ενεργοποιηθεί όταν η πόρτα είναι κλειστή.",
     "three_standby": "Ρυθμίστε μετά από πόσα λεπτά χωρίς ενέργεια μετά την 'Οθόνη ρολογιού', η οθόνη του ντουλαπιού θα μεταβεί σε κατάσταση αναμονής.",
     "delete_account_tips": "Θα λάβετε ένα e-mail όταν διαγραφούν όλα τα δεδομένα σας από το σύστημά μας.",
-    "CL_DV_RF_water_inlet_tube_sensor": "Αισθητήρας σωλήνα εισαγωγής νερού"
+    "CL_DV_RF_water_inlet_tube_sensor": "Αισθητήρας σωλήνα εισαγωγής νερού",
+    "CL_DV_OV_set_power_watts": "ΡΥΘΜΙΣΗ ΙΣΧΥΟΣ (WATTS)",
+    "CL_DV_OV_power_90_desc": "Απόψυξη ζαχαροπλαστικής γεμάτη κρέμα.",
+    "CL_DV_OV_power_180_desc": "Χειροκίνητη απόψυξη και μαλάκωμα βουτύρου ή παγωτού.",
+    "CL_DV_OV_power_360_desc": "Μαγείρεμα γαλακτοκομικών προϊόντων ή μαρμελάδων σε χαμηλή φωτιά.",
+    "CL_DV_OV_power_600_desc": "Κατάλληλο για λιώσιμο σοκολάτας, μαγείρεμα ψαριών και θαλασσινών, μαγείρεμα αποξηραμένων φασολιών σε χαμηλή φωτιά. Ζέσταμα και μαγείρεμα ευαίσθητων πιάτων με βάση τα αυγά.",
+    "CL_DV_OV_power_750_desc": "Χρησιμοποιείται για το μαγείρεμα φρέσκων ή κατεψυγμένων λαχανικών.",
+    "CL_DV_OV_power_1000_desc": "Ιδανικό για γρήγορο ζέσταμα ποτών, νερού και πιάτων που περιέχουν μεγάλο όγκο υγρών ή μαγειρικών πιάτων με υψηλή περιεκτικότητα σε νερό (σούπες, σάλτσες κ.λπ.).",
+    "CL_DV_OV_microwave_power_levels": "ΕΠΙΠΕΔΑ ΙΣΧΥΟΣ ΜΙΚΡΟΚΥΜΑΤΩΝ"
 }
