--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4200,5 +4200,13 @@
     "ambient_mode_msg": "מצב אווירה משתלב באווירת חלל המגורים. זה יופעל כאשר הדלת סגורה.",
     "three_standby": "הגדר לאחר כמה דקות ללא פעולה לאחר 'מסך שעון', תצוגת הארון תעבור למצב המתנה.",
     "delete_account_tips": "תקבל הודעת דואר אלקטרוני כאשר כל הנתונים שלך יימחקו מהמערכת שלנו.",
-    "CL_DV_RF_water_inlet_tube_sensor": "חיישן צינור כניסת מים"
+    "CL_DV_RF_water_inlet_tube_sensor": "חיישן צינור כניסת מים",
+    "CL_DV_OV_set_power_watts": "הגדר כוח (וואט)",
+    "CL_DV_OV_power_90_desc": "הפשרה של מאפה במילוי שמנת.",
+    "CL_DV_OV_power_180_desc": "הפשרה ידנית וריכוך חמאה או גלידה.",
+    "CL_DV_OV_power_360_desc": "בישול בחום נמוך של מוצרי חלב או ריבות.",
+    "CL_DV_OV_power_600_desc": "מתאים להמסת שוקולד, בישול דגים ופירות ים, בישול שעועית יבשה בחום נמוך.חימום ובישול של תבשילים עדינים על בסיס ביצים.",
+    "CL_DV_OV_power_750_desc": "השתמש לבישול ירקות טריים או קפואים.",
+    "CL_DV_OV_power_1000_desc": "הטוב ביותר לחימום מהיר של משקאות, מים וכלים המכילים נפח גדול של נוזלים או מנות בישול עם תכולת מים גבוהה (מרקים, רטבים וכו').",
+    "CL_DV_OV_microwave_power_levels": "רמות כוח במיקרוגל"
 }
