--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4200,5 +4200,13 @@
     "ambient_mode_msg": "एम्बिएंट मोड लिविंग स्पेस के माहौल में घुलमिल जाता है। दरवाज़ा बंद होने पर यह सक्रिय हो जाएगा।",
     "three_standby": "'क्लॉक स्क्रीन' के बाद कितने मिनट तक कोई कार्रवाई नहीं होने पर कैबिनेट का डिस्प्ले स्टैंडबाय पर चला जाएगा, यह निर्धारित करें।",
     "delete_account_tips": "जब आपका सारा डेटा हमारे सिस्टम से हटा दिया जाएगा तो आपको एक ई-मेल प्राप्त होगा।",
-    "CL_DV_RF_water_inlet_tube_sensor": "जल इनलेट ट्यूब सेंसर"
+    "CL_DV_RF_water_inlet_tube_sensor": "जल इनलेट ट्यूब सेंसर",
+    "CL_DV_OV_set_power_watts": "सेट पावर (वाट)",
+    "CL_DV_OV_power_90_desc": "क्रीम से भरी पेस्ट्री को डीफ्रॉस्ट करना।",
+    "CL_DV_OV_power_180_desc": "मक्खन या आइसक्रीम को मैन्युअल रूप से डीफ्रॉस्ट करना और नरम करना।",
+    "CL_DV_OV_power_360_desc": "डेयरी उत्पादों या जैम को कम आंच पर पकाना।",
+    "CL_DV_OV_power_600_desc": "चॉकलेट पिघलाने, मछली और समुद्री भोजन पकाने, कम गर्मी पर सूखे सेम पकाने के लिए उपयुक्त। नाजुक अंडा आधारित व्यंजनों को गर्म करने और पकाने के लिए उपयुक्त।",
+    "CL_DV_OV_power_750_desc": "ताजा या जमी हुई सब्जियां पकाने के लिए उपयोग करें।",
+    "CL_DV_OV_power_1000_desc": "पेय पदार्थों, पानी और बड़ी मात्रा में तरल पदार्थ वाले बर्तनों को जल्दी से गर्म करने या उच्च जल सामग्री वाले बर्तनों (सूप, सॉस आदि) को पकाने के लिए सर्वोत्तम।",
+    "CL_DV_OV_microwave_power_levels": "माइक्रोवेव पावर स्तर"
 }
