--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4200,5 +4200,13 @@
     "ambient_mode_msg": "Қоршаған орта режимі тұрғын кеңістіктің атмосферасына үйлеседі. Ол есік жабылған кезде іске қосылады.",
     "three_standby": "«Сағат экранынан» кейін қанша минут әрекет жасамасаңыз, шкаф дисплейі күту режиміне өтеді.",
     "delete_account_tips": "Жүйеден барлық деректер жойылған кезде сізге электрондық хат келеді.",
-    "CL_DV_RF_water_inlet_tube_sensor": "Су құятын түтік сенсоры"
+    "CL_DV_RF_water_inlet_tube_sensor": "Су құятын түтік сенсоры",
+    "CL_DV_OV_set_power_watts": "ҚУАТТЫ ОРНАТУ (ВАТТ)",
+    "CL_DV_OV_power_90_desc": "Крем толтырылған қамырды жібіту.",
+    "CL_DV_OV_power_180_desc": "Сары майды немесе балмұздақты қолмен жібіту және жұмсарту.",
+    "CL_DV_OV_power_360_desc": "Сүт өнімдерін немесе джемдерді төмен температурада пісіру.",
+    "CL_DV_OV_power_600_desc": "Шоколадты ерітуге, балық пен теңіз өнімдерін пісіруге, кептірілген бұршақтарды төмен температурада пісіруге жарайды. Жұмыртқа негізіндегі нәзік тағамдарды қыздыру және пісіру.",
+    "CL_DV_OV_power_750_desc": "Жаңа піскен немесе мұздатылған көкөністерді пісіру үшін пайдаланыңыз.",
+    "CL_DV_OV_power_1000_desc": "Сусындарды, суды және сұйықтықтың үлкен көлемі бар ыдыстарды жылдам қыздыруға немесе құрамында суы жоғары ыдыстарды (сорпалар, соустар, т.б.) пісіруге арналған.",
+    "CL_DV_OV_microwave_power_levels": "МИКРОТОЛҚЫНДЫҚ ҚУАТ ДЕҢГЕЙЛЕРІ"
 }
