--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4200,5 +4200,13 @@
     "ambient_mode_msg": "Режим Ambient вписывается в атмосферу жилого помещения. Он активируется при закрытии двери.",
     "three_standby": "Установите, через сколько минут бездействия после «Экрана часов» дисплей корпуса перейдет в режим ожидания.",
     "delete_account_tips": "Когда все ваши данные будут удалены из нашей системы, вы получите электронное письмо.",
-    "CL_DV_RF_water_inlet_tube_sensor": "Датчик впускной трубы воды"
+    "CL_DV_RF_water_inlet_tube_sensor": "Датчик впускной трубы воды",
+    "CL_DV_OV_set_power_watts": "УСТАНОВЛЕННАЯ МОЩНОСТЬ (ВАТТ)",
+    "CL_DV_OV_power_90_desc": "Размораживаем пирожные с кремом.",
+    "CL_DV_OV_power_180_desc": "Ручное размораживание и размягчение масла или мороженого.",
+    "CL_DV_OV_power_360_desc": "Приготовление молочных продуктов или джемов на медленном огне.",
+    "CL_DV_OV_power_600_desc": "Подходит для плавления шоколада, приготовления рыбы и морепродуктов, варки сушеных бобов на медленном огне. Разогрева и приготовления нежных блюд на основе яиц.",
+    "CL_DV_OV_power_750_desc": "Используйте для приготовления свежих или замороженных овощей.",
+    "CL_DV_OV_power_1000_desc": "Идеально подходит для быстрого разогрева напитков, воды и блюд, содержащих большой объем жидкости, а также для приготовления блюд с высоким содержанием воды (супов, соусов и т. д.).",
+    "CL_DV_OV_microwave_power_levels": "УРОВНИ МОЩНОСТИ МИКРОВОЛНОВОЙ ПЕЧИ"
 }
