--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4200,5 +4200,13 @@
     "ambient_mode_msg": "โหมด Ambient จะกลมกลืนไปกับบรรยากาศของพื้นที่อยู่อาศัย โหมดนี้จะเปิดใช้งานเมื่อปิดประตู",
     "three_standby": "ตั้งค่าว่าหลังจากไม่มีการเคลื่อนไหวใดๆ เป็นเวลากี่นาทีหลังจาก 'หน้าจอนาฬิกา' การแสดงผลของตู้จะเปลี่ยนไปสู่โหมดสแตนด์บาย",
     "delete_account_tips": "คุณจะได้รับอีเมลเมื่อข้อมูลทั้งหมดของคุณถูกลบออกจากระบบของเรา",
-    "CL_DV_RF_water_inlet_tube_sensor": "เซ็นเซอร์ท่อทางเข้าน้ำ"
+    "CL_DV_RF_water_inlet_tube_sensor": "เซ็นเซอร์ท่อทางเข้าน้ำ",
+    "CL_DV_OV_set_power_watts": "ตั้งค่ากำลังไฟ (วัตต์)",
+    "CL_DV_OV_power_90_desc": "การละลายน้ำแข็งขนมอบไส้ครีม",
+    "CL_DV_OV_power_180_desc": "การละลายน้ำแข็งและทำให้เนยหรือไอศกรีมอ่อนตัวด้วยมือ",
+    "CL_DV_OV_power_360_desc": "การปรุงอาหารด้วยความร้อนต่ำสำหรับผลิตภัณฑ์นมหรือแยม",
+    "CL_DV_OV_power_600_desc": "เหมาะสำหรับการละลายช็อคโกแลต การทำอาหารปลาและอาหารทะเล การต้มถั่วแห้งด้วยไฟอ่อน การอุ่นและปรุงอาหารจานละเอียดอ่อนที่มีส่วนประกอบของไข่",
+    "CL_DV_OV_power_750_desc": "ใช้สำหรับประกอบอาหารผักสดหรือแช่แข็ง",
+    "CL_DV_OV_power_1000_desc": "เหมาะที่สุดสำหรับการอุ่นเครื่องดื่ม น้ำ และจานที่มีของเหลวปริมาณมากได้อย่างรวดเร็ว หรือปรุงอาหารที่มีปริมาณน้ำสูง (ซุป ซอส เป็นต้น)",
+    "CL_DV_OV_microwave_power_levels": "ระดับพลังงานไมโครเวฟ"
 }
