--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4200,5 +4200,13 @@
     "ambient_mode_msg": "Режим Ambient зливається з атмосферою житлового простору. Він активується, коли двері зачиняються.",
     "three_standby": "Встановіть, через скільки хвилин бездіяльності після «Екран годинника» дисплей кабінету перейде в режим очікування.",
     "delete_account_tips": "Ви отримаєте електронний лист, коли всі ваші дані будуть видалені з нашої системи.",
-    "CL_DV_RF_water_inlet_tube_sensor": "Датчик трубки входу води"
+    "CL_DV_RF_water_inlet_tube_sensor": "Датчик трубки входу води",
+    "CL_DV_OV_set_power_watts": "ВСТАНОВЛЕНА ПОТУЖНІСТЬ (ВАТИ)",
+    "CL_DV_OV_power_90_desc": "Розморожування тіста з кремовою начинкою.",
+    "CL_DV_OV_power_180_desc": "Ручне розморожування та розм'якшення вершкового масла або морозива.",
+    "CL_DV_OV_power_360_desc": "Варіння молочних продуктів або варення на слабкому вогні.",
+    "CL_DV_OV_power_600_desc": "Підходить для розтоплення шоколаду, приготування риби та морепродуктів, варіння сушених бобів на слабкому вогні. Розігрівання та приготування ніжних страв на основі яєць.",
+    "CL_DV_OV_power_750_desc": "Використовуйте для приготування свіжих або заморожених овочів.",
+    "CL_DV_OV_power_1000_desc": "Найкраще підходить для швидкого розігріву напоїв, води та страв, що містять велику кількість рідини, або приготування страв із високим вмістом води (супи, соуси тощо).",
+    "CL_DV_OV_microwave_power_levels": "РІВНІ МІКРОХВИЛЬОВОЇ ПОТУЖНОСТІ"
 }
