--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -4200,5 +4200,13 @@
     "ambient_mode_msg": "Az Ambient mód beleolvad a lakótér hangulatába. Az ajtó becsukásakor aktiválódik.",
     "three_standby": "Állítsa be, hogy az „Óra képernyő” után hány percnyi művelet után a szekrény kijelzője készenléti állapotba kerül.",
     "delete_account_tips": "Ha minden adatát töröljük rendszerünkből, e-mailt kap.",
-    "CL_DV_RF_water_inlet_tube_sensor": "Vízbemeneti cső érzékelő"
+    "CL_DV_RF_water_inlet_tube_sensor": "Vízbemeneti cső érzékelő",
+    "CL_DV_OV_set_power_watts": "TELJESÍTMÉNY BEÁLLÍTÁSA (WATTS)",
+    "CL_DV_OV_power_90_desc": "Krémmel töltött tészta kiolvasztása.",
+    "CL_DV_OV_power_180_desc": "A vaj vagy fagylalt kézi kiolvasztása és lágyítása.",
+    "CL_DV_OV_power_360_desc": "Tejtermékek vagy lekvárok főzése alacsony hőfokon.",
+    "CL_DV_OV_power_600_desc": "Alkalmas csokoládé olvasztására, hal és tenger gyümölcsei főzésére, szárított bab főzésére alacsony hőfokon. Finom tojás alapú ételek melegítése és főzése.",
+    "CL_DV_OV_power_750_desc": "Friss vagy fagyasztott zöldségek főzésére használható.",
+    "CL_DV_OV_power_1000_desc": "Legjobb italok, víz és nagy mennyiségű folyadékot tartalmazó ételek gyors felmelegítésére vagy magas víztartalmú ételek (levesek, szószok stb.) főzésére.",
+    "CL_DV_OV_microwave_power_levels": "MIKROHULLÁMÚ TELJESÍTMÉNYSZINT"
 }
