--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -4200,5 +4200,13 @@
     "ambient_mode_msg": "アンビエントモードは、リビングスペースの雰囲気に溶け込みます。ドアを閉めると起動します。",
     "three_standby": "「時計画面」の後に何分間操作が行われなかった場合に、キャビネットのディスプレイがスタンバイ状態になるかを設定します。",
     "delete_account_tips": "すべてのデータがシステムから削除されると、電子メールが届きます。",
-    "CL_DV_RF_water_inlet_tube_sensor": "水入口チューブセンサー"
+    "CL_DV_RF_water_inlet_tube_sensor": "水入口チューブセンサー",
+    "CL_DV_OV_set_power_watts": "電力設定（ワット）",
+    "CL_DV_OV_power_90_desc": "クリーム入りペストリーを解凍中。",
+    "CL_DV_OV_power_180_desc": "バターやアイスクリームを手動で解凍して柔らかくします。",
+    "CL_DV_OV_power_360_desc": "乳製品やジャムなどを弱火で調理します。",
+    "CL_DV_OV_power_600_desc": "チョコレートを溶かしたり、魚介類を調理したり、乾燥豆を弱火で調理したりするのに適しています。デリケートな卵料理の再加熱や調理にも最適です。",
+    "CL_DV_OV_power_750_desc": "新鮮な野菜や冷凍野菜の調理に使用します。",
+    "CL_DV_OV_power_1000_desc": "大量の液体を含む飲み物、水、料理を素早く温めたり、水分の多い料理（スープ、ソースなど）を調理するのに最適です。",
+    "CL_DV_OV_microwave_power_levels": "マイクロ波電力レベル"
 }
