--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4200,5 +4200,13 @@
     "ambient_mode_msg": "Амбиенталниот режим се вклопува во амбиентот на просторот за живеење. Ќе се активира кога вратата е затворена.",
     "three_standby": "Поставете по колку минути без дејство по „Екранот на часовникот“, приказот на кабинетот ќе оди во мирување.",
     "delete_account_tips": "Ќе добиете е-пошта кога сите ваши податоци ќе бидат избришани од нашиот систем.",
-    "CL_DV_RF_water_inlet_tube_sensor": "Сензор за цевка за довод на вода"
+    "CL_DV_RF_water_inlet_tube_sensor": "Сензор за цевка за довод на вода",
+    "CL_DV_OV_set_power_watts": "ПОСТАВЕТЕ МОЌНОСТ (ВАТИ)",
+    "CL_DV_OV_power_90_desc": "Пециво наполнето со крем за одмрзнување.",
+    "CL_DV_OV_power_180_desc": "Рачно одмрзнување и омекнување путер или сладолед.",
+    "CL_DV_OV_power_360_desc": "Готвење на млечни производи или џемови на ниска топлина.",
+    "CL_DV_OV_power_600_desc": "Погоден за топење чоколада, готвење риба и морски плодови, готвење сушен грав на тивок оган. Повторно загревање и готвење на деликатни јадења на база на јајца.",
+    "CL_DV_OV_power_750_desc": "Користете за готвење свеж или замрзнат зеленчук.",
+    "CL_DV_OV_power_1000_desc": "Најдобро за брзо загревање на пијалоци, вода и јадења што содржат голем волумен на течност или за готвење јадења со висока содржина на вода (супи, сосови итн.).",
+    "CL_DV_OV_microwave_power_levels": "НИВОА НА МИКРОБРАНОВА МОЌНОСТ"
 }
