--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -4200,5 +4200,13 @@
     "ambient_mode_msg": "Tryb Ambient wtapia się w otoczenie przestrzeni życiowej. Zostanie aktywowany po zamknięciu drzwi.",
     "three_standby": "Ustaw, po ilu minutach bezczynności po wybraniu opcji „Ekran zegara” wyświetlacz szafy przejdzie w tryb czuwania.",
     "delete_account_tips": "Otrzymasz wiadomość e-mail, gdy wszystkie Twoje dane zostaną usunięte z naszego systemu.",
-    "CL_DV_RF_water_inlet_tube_sensor": "Czujnik rury wlotowej wody"
+    "CL_DV_RF_water_inlet_tube_sensor": "Czujnik rury wlotowej wody",
+    "CL_DV_OV_set_power_watts": "USTAWIENIE MOCY (WATÓW)",
+    "CL_DV_OV_power_90_desc": "Rozmrażanie ciasta francuskiego z kremem.",
+    "CL_DV_OV_power_180_desc": "Ręczne rozmrażanie i zmiękczanie masła lub lodów.",
+    "CL_DV_OV_power_360_desc": "Gotowanie produktów mlecznych lub dżemów w niskiej temperaturze.",
+    "CL_DV_OV_power_600_desc": "Nadaje się do topienia czekolady, gotowania ryb i owoców morza, gotowania suszonej fasoli w niskiej temperaturze. Podgrzewania i gotowania delikatnych potraw na bazie jajek.",
+    "CL_DV_OV_power_750_desc": "Stosować do gotowania świeżych lub mrożonych warzyw.",
+    "CL_DV_OV_power_1000_desc": "Najlepiej nadaje się do szybkiego podgrzewania napojów, wody i potraw zawierających dużą ilość płynu lub do gotowania potraw z dużą zawartością wody (zupy, sosy itp.).",
+    "CL_DV_OV_microwave_power_levels": "POZIOMY MOCY MIKROFALÓWKI"
 }
