--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -4200,5 +4200,13 @@
     "ambient_mode_msg": "O modo ambiente se mistura ao ambiente do espaço de convivência. Ele será ativado quando a porta for fechada.",
     "three_standby": "Defina quantos minutos após a 'Tela do relógio' sem nenhuma ação, o visor do gabinete entrará no modo de espera.",
     "delete_account_tips": "Você receberá um e-mail quando todos os seus dados forem excluídos do nosso sistema.",
-    "CL_DV_RF_water_inlet_tube_sensor": "Sensor de tubo de entrada de água"
+    "CL_DV_RF_water_inlet_tube_sensor": "Sensor de tubo de entrada de água",
+    "CL_DV_OV_set_power_watts": "POTÊNCIA DEFINIDA (WATTS)",
+    "CL_DV_OV_power_90_desc": "Descongelando massa folhada recheada com creme.",
+    "CL_DV_OV_power_180_desc": "Descongelamento manual e amolecimento de manteiga ou sorvete.",
+    "CL_DV_OV_power_360_desc": "Cozimento em fogo baixo de laticínios ou geleias.",
+    "CL_DV_OV_power_600_desc": "Adequado para derreter chocolate, cozinhar peixes e frutos do mar, cozinhar feijões secos em fogo baixo. Reaquecer e cozinhar pratos delicados à base de ovos.",
+    "CL_DV_OV_power_750_desc": "Use para cozinhar vegetais frescos ou congelados.",
+    "CL_DV_OV_power_1000_desc": "Ideal para reaquecer rapidamente bebidas, água e pratos que contenham grande volume de líquido ou cozinhar pratos com alto teor de água (sopas, molhos etc.).",
+    "CL_DV_OV_microwave_power_levels": "NÍVEIS DE POTÊNCIA DO MICROONDAS"
 }
