--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -4200,5 +4200,13 @@
     "ambient_mode_msg": "Амбијентални режим се уклапа у амбијент животног простора. Активираће се када се врата затворе.",
     "three_standby": "Подесите након колико минута без радње након 'Екран сата', екран кабинета ће прећи у стање приправности.",
     "delete_account_tips": "Добићете е-пошту када сви ваши подаци буду избрисани из нашег система.",
-    "CL_DV_RF_water_inlet_tube_sensor": "Сензор цеви за довод воде"
+    "CL_DV_RF_water_inlet_tube_sensor": "Сензор цеви за довод воде",
+    "CL_DV_OV_set_power_watts": "ПОДЕШАВАЊЕ СНАГЕ (ВАТТС)",
+    "CL_DV_OV_power_90_desc": "Пециво пуњено кремом за одмрзавање.",
+    "CL_DV_OV_power_180_desc": "Ручно одмрзавање и омекшавање путера или сладоледа.",
+    "CL_DV_OV_power_360_desc": "Кување млечних производа или џемова на ниској температури.",
+    "CL_DV_OV_power_600_desc": "Погодно за топљење чоколаде, кување рибе и морских плодова, кување сушеног пасуља на лаганој ватри. Подгревање и кување деликатних јела на бази јаја.",
+    "CL_DV_OV_power_750_desc": "Користи се за кување свежег или смрзнутог поврћа.",
+    "CL_DV_OV_power_1000_desc": "Најбоље за брзо подгревање напитака, воде и јела која садрже велику количину течности или јела за кување са високим садржајем воде (супе, сосови итд.).",
+    "CL_DV_OV_microwave_power_levels": "НИВОИ СНАГЕ МИКРОТАЛАСНЕ"
 }
