--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -4200,5 +4200,13 @@
     "ambient_mode_msg": "Chế độ môi trường xung quanh hòa vào không gian sống. Chế độ này sẽ được kích hoạt khi cửa đóng.",
     "three_standby": "Cài đặt sau bao nhiêu phút không có hành động nào sau 'Màn hình đồng hồ', màn hình tủ sẽ chuyển sang chế độ chờ.",
     "delete_account_tips": "Bạn sẽ nhận được email khi toàn bộ dữ liệu của bạn bị xóa khỏi hệ thống của chúng tôi.",
-    "CL_DV_RF_water_inlet_tube_sensor": "Cảm biến ống nước vào"
+    "CL_DV_RF_water_inlet_tube_sensor": "Cảm biến ống nước vào",
+    "CL_DV_OV_set_power_watts": "ĐẶT CÔNG SUẤT (WATT)",
+    "CL_DV_OV_power_90_desc": "Rã đông bánh ngọt nhân kem.",
+    "CL_DV_OV_power_180_desc": "Rã đông và làm mềm bơ hoặc kem bằng tay.",
+    "CL_DV_OV_power_360_desc": "Nấu các sản phẩm từ sữa hoặc mứt ở nhiệt độ thấp.",
+    "CL_DV_OV_power_600_desc": "Thích hợp để làm tan chảy sô cô la, nấu cá và hải sản, nấu đậu khô ở nhiệt độ thấp. Hâm nóng và nấu các món ăn tinh tế từ trứng.",
+    "CL_DV_OV_power_750_desc": "Dùng để nấu rau tươi hoặc rau đông lạnh.",
+    "CL_DV_OV_power_1000_desc": "Tốt nhất để hâm nóng nhanh đồ uống, nước và các món ăn chứa nhiều chất lỏng hoặc nấu các món ăn có hàm lượng nước cao (súp, nước sốt, v.v.).",
+    "CL_DV_OV_microwave_power_levels": "MỨC CÔNG SUẤT LÒ VI SÓNG"
 }
